# upstage_todo_list

./: .gitignore  docker-compose.yml  main.py  pyproject.toml  test.py
.github/workflows/: workflow.yml
app/: deps.py  main.py
app/core/: db.py
app/logs/: app.log.1  app.log.2  app.log.3  app.log.4  app.log.5
app/models/entities/: todos.py
app/models/schemas/: todo.py
app/repositories/: todo_repository.py
app/routers/: todo_router.py
app/services/: todo_service.py
